--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,14 @@
     font-family: "Poppis", sans-serif;
     box-sizing: border-box;
 }
+
+.hero {
+
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0, 0, 0, .8), rgba(0, 0, 0, .8)),url(./img/background.png);
+    background-size: cover;
+    background-position: center;
+    padding: 10px 10%;
+    color : #fff
+}
